# kasbah-capstone

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  bun.lockb  package.json  tsconfig.json
circuits/: input.json  ksb.circom  ksb.r1cs  ksb.sym  ksb.wasm  proof.json  public.json
idl/: kasbah.json
keys/: adminwH8kDUg5DqfsA6egyPDj7uFJTgBwDG1L7skJaq.json
programs/kasbah/: Cargo.toml
programs/kasbah/src/: constants.rs  errors.rs  lib.rs
programs/kasbah/src/instructions/: deposit.rs  genesis.rs  hello.rs  mod.rs
programs/kasbah/src/sdk/: mod.rs  proof.rs  receipt.rs  secrets.rs
programs/kasbah/src/state/: mod.rs  pool.rs  treasury.rs
scripts/: generate-clients.ts
tests/: __setup__.ts  hello.test.ts
tests/utils/: constants.ts
verifier/: Cargo.toml
verifier/src/: errors.rs  lib.rs
wasm/: Cargo.toml  tree
wasm/src/: conversions.rs  errors.rs  generators.rs  hashing.rs  lib.rs  merkle.rs  proof.rs  rand.rs  tests.rs
