[package]
name = "kasbah-wasm-utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
ark-serialize = "0.5.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
num-bigint = "0.4.6"
solana-pubkey = "2.2.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
ark-std = "0.5.0"
ark-circom = { git = "https://github.com/gakonst/ark-circom.git", branch = "release-0.5" }
light-poseidon = "0.3.0"
ark-groth16 = "0.5.0"
ark-snark = "0.5.0"

[dev-dependencies]
color-eyre = "0.6.3"
merkle-poseidon = { git = "https://github.com/AlaaZorkane/merkle-poseidon" }
