[package]
name = "kasbah"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kasbah"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"]}
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git" }
blake3 = "1.5.5"
borsh = "1.5.5"
solana-zk-sdk = { git = "https://github.com/AlaaZorkane/agave.git"}
solana-zk-token-sdk = "2.1.11"
serde_json = "1.0.137"
thiserror = "2.0.6"
